Added wave and goodbye grovey

--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
-    <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
+    <link rel="stylesheet" href="css/animated.css">
     <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
+<div class = "container">
+    <div class="row"><img class="col-md-4 animated flip" src="http://www.eddieyoung.com/images/wave.gif?crc=3986575372">
+        <h1 class = "col-md-8"id="groovy">GoodBYE!!!!</h1></div>
 
-<h1 ckass="animated flip">test</h1>
+</div>
+
+git
+
+
 
 </body>
 <script src="js/aman.js"></script>
