added like you text

--- a/index.html
+++ b/index.html
@@ -24,10 +24,20 @@
 
 </div>
 
-git
+<article>
+<br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 class= "animated bounce text-center" id="headline">I really like you</h1>
+</article>
 
 
 
 </body>
+<script src="js/likeYou.js"></script>
+
 <script src="js/aman.js"></script>
 </html>
