--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <link rel="stylesheet" href="css/animated.css">
     <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 
 </head>
 <body>
@@ -22,17 +24,27 @@
     <div class="row"><img class="col-md-4 animated flip" src="http://www.eddieyoung.com/images/wave.gif?crc=3986575372">
         <h1 class = "col-md-8"id="groovy">GoodBYE!!!!</h1></div>
 
-</div>
 
-<article>
+
+<article class="row">
 <br>
     <br>
     <br>
     <br>
+
     <br>
     <br>
-    <h1 class= "animated bounce text-center" id="headline">I really like you</h1>
+    <br><br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1 class= "col-md-12 animated bounce text-center" id="headline">I really like you</h1>
 </article>
+</div>
 
 
 
